@@ -37,6 +37,7 @@ localeCategory          = 'LC_ALL'
 adminGuiTheme           = default_admin
 defaultTheme            = default
 filterChain             =
+globalJavascriptOnload  =
 
 [path]
 additionalIncludePath   =
