@@ -329,6 +329,8 @@ Author: Rafael Ferreira Silva <rafael@webphp.com.br>
         'Seagull allows you to use the template engine of your choice' => 'Seagull allows you to use the template engine of your choice',
         'The Smarty template hooks have not been implemented yet' => 'The Smarty template hooks have not been implemented yet',
         'This query is used to set the default character set for the current connection (MySQL 4.1 or higher). For example: SET NAMES utf8' => 'This query is used to set the default character set for the current connection (MySQL 4.1 or higher). For example: SET NAMES utf8',
+        'Global Javascript Onload' => 'Global Javascript Onload',
+        'globalJavascript' => 'If you want a Javascript onload expression called on every page of your site, put it here',
 
 /*
  ConfigMgr: MTA options
