@@ -165,6 +165,13 @@ function toggleTransElements() {
                 <label for="conf[site][alert]">{translate(#Broadcast message#)}</label>
                 <input type="text" class="longText" name="conf[site][alert]" id="conf[site][alert]" value="{conf[site][alert]}" />
             </p>
+            <p>
+                <label class="tipOwner" for="conf[site][globalJavascriptOnload]">{translate(#Global Javascript Onload#)}
+                <span  class="tipText">{translate(#globalJavascript#)}</span>
+                </label>
+                <input type="text" class="longText" name="conf[site][globalJavascriptOnload]" id="conf[site][globalJavascriptOnload]" value="{conf[site][globalJavascriptOnload]}" />
+            </p>
+
 
             <h3 class="show">{translate(#Paths#)}</h3>
             <p>
